[tool.poetry]
name = "ai-data-analysis-guiderail"
version = "0.0.1"
description = "An advanced data analysis and conditional completions API using OpenAI's GPT models."
authors = ["@ruvnet"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.105.0"
httpx = "^0.25.2"
pydantic = "^2.5.2"
requests = "^2.31.0"
uvicorn = "0.24.0.post1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"